# InfotechTask

./: CMakeLists.txt
first_app/: main.cpp
network/: abstract_socket.hpp  acceptor.hpp  address.hpp  address_v4.hpp  address_v6.hpp  base_socket.hpp  endpoint.hpp  socket.hpp
network/detail/: socket_types.hpp
network/windows/: wsa_handler.hpp
second_app/: main.cpp
